# Image-Flow

./: .gitignore  CMakeLists.txt  Dockerfile  GITHUB_GUIDE.md  PUSH_INSTRUCTIONS.md  QUICK_START_VSCODE.md  README.md  SUCCESS.md  VSCODE_GITHUB_GUIDE.md  benchmark.cpp  compile_report.sh  imageflow_cli.cpp  push_now.sh  push_to_github.sh  report.tex  run_cli.sh  run_gui.sh  test_click.cpp  test_compile.cpp  test_gpu  test_gpu.cpp  test_openmp  test_parallel.cpp  test_qt_basic  test_qt_basic_fixed
core/: CMakeLists.txt
core/include/: Filter.hpp  FilterFactory.hpp  FilterPipeline.hpp  Image.hpp
core/include/filters/: BoxBlurFilter.hpp  BoxBlurFilterGPU.hpp  BrightnessFilter.hpp  GrayscaleFilter.hpp  GrayscaleFilterGPU.hpp  InvertFilter.hpp  PerformanceBenchmark.hpp  SepiaFilter.hpp
core/src/: FilterPipeline.cpp  FilterRegistration.cpp  Image.cpp  stb_image.h  stb_image_write.h
core/src/filters/: BoxBlurFilter.cpp  BoxBlurFilterGPU.cpp  BrightnessFilter.cpp  GrayscaleFilter.cpp  GrayscaleFilterGPU.cpp  InvertFilter.cpp
gui/: CMakeLists.txt
gui/include/: MainWindow.hpp
gui/src/: MainWindow.cpp  main.cpp
tests/: CMakeLists.txt  test_click.cpp  test_compile.cpp  test_filters.cpp  test_gpu.cpp  test_openmp.cpp  test_parallel.cpp  test_qt_basic.cpp
